footer added to application

--- a/index.html
+++ b/index.html
@@ -253,5 +253,30 @@
         });
     </script>
 </body>
+<footer class="app-footer">
+    <div class="footer-content">
+        <div class="footer-links">
+            <a href="https://github.com/LastChemist" target="_blank" class="footer-link">
+                <i class="fab fa-github"></i> LastChemist
+            </a>
+
+            <span class="footer-separator">•</span>
+
+            <a href="https://github.com/LastChemist/CREB" target="_blank" class="footer-link">
+                <i class="fas fa-flask"></i> CREB (Python)
+            </a>
+
+            <span class="footer-separator">•</span>
+
+            <a href="https://github.com/LastChemist/creb_web" target="_blank" class="footer-link">
+                <i class="fas fa-code"></i> CREB Web
+            </a>
+        </div>
+
+        <div class="footer-copyright">
+            <i class="far fa-copyright"></i> &copy 2026 LastChemist
+        </div>
+    </div>
+</footer>
 
 </html>
